--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,35 @@
 /*  your css code here. If applicable */
+td#left{
+	text-align: left;
+}
+.center{
+	text-align: center;
+}
+.right{
+	text-align: right;
+}
+td{
+	  height: 30px;
+	width:120px
+}
+.middle{
+	margin: auto;
+    width: 60%;
+}
+table{
+    border: 1px solid black;
+    border-spacing: 1px;
+}
+td{
+    padding: 1px;
+    border: 1px solid black;
+}
+.green{
+    background-color: green;
+}
+
+.blue{
+    background-color: blue;
+}
+
+
